# serial-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
include/: json_converter.h  session.h  shared.h
src/: main.cpp  session.cpp  shared.cpp
